[gd_scene load_steps=10 format=2]

[ext_resource path="res://minimap.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/Camera.gd" type="Script" id=2]
[ext_resource path="res://script/Button.gd" type="Script" id=3]

[sub_resource type="GDScript" id=1]
script/source = "extends Spatial

# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass



#"

[sub_resource type="PlaneMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.0509804, 0.160784, 0.231373, 1 )
metallic = 0.29
roughness = 0.53
depth_enabled = true
depth_scale = 0.05
depth_deep_parallax = false
depth_flip_tangent = false
depth_flip_binormal = false

[sub_resource type="CubeMesh" id=4]

[sub_resource type="CapsuleMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.803922, 0.772549, 0.0941176, 1 )
metallic = 0.33
roughness = 0.55

[node name="global" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.96481 )
script = SubResource( 1 )

[node name="minimap" type="ViewportContainer" parent="."]
margin_left = -1.0
margin_top = 1.0
margin_right = 246.0
margin_bottom = 187.0

[node name="Viewport" type="Viewport" parent="minimap"]
size = Vector2( 247, 186 )
handle_input_locally = false
render_target_update_mode = 3

[node name="scene1" parent="minimap/Viewport" instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 15, 50 )
script = ExtResource( 2 )

[node name="ground" type="MeshInstance" parent="."]
transform = Transform( 30, 0, 0, 0, 30, 0, 0, 0, 30, 0, 1, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="box1" type="MeshInstance" parent="."]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, -20, 4, -10 )
mesh = SubResource( 4 )
material/0 = null

[node name="point1" type="MeshInstance" parent="box1"]
transform = Transform( 0.1, 0, 0, 0, 0.0892101, 1.002, 0, -0.109734, -0.00284026, 0, 3.241, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="box2" type="MeshInstance" parent="."]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, -6.62667, 4, 20 )
mesh = SubResource( 4 )
material/0 = null

[node name="point2" type="MeshInstance" parent="box2"]
transform = Transform( 0.1, 0, 0, 0, 0.0892101, 1.002, 0, -0.109734, -0.00284026, 0, 3.05967, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="box3" type="MeshInstance" parent="."]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 10, 4, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="point3" type="MeshInstance" parent="box3"]
transform = Transform( 0.1, 0, 0, 0, 0.0892101, 1.002, 0, -0.109734, -0.00284026, 0.0562794, 3.18781, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="box4" type="MeshInstance" parent="."]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 20, 4, 10 )
mesh = SubResource( 4 )
material/0 = null

[node name="point4" type="MeshInstance" parent="box4"]
transform = Transform( 0.1, 0, 0, 0, 0.0892101, 1.002, 0, -0.109734, -0.00284026, -0.0580664, 2.8688, 0.240622 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.375186, 0.438287, -0.816787, -0.474496, 0.847766, 0.236954, 0.796297, 0.29866, 0.526035, 0, 28.6703, 4.76837e-007 )

[node name="Button" type="Button" parent="."]
margin_left = 954.191
margin_top = 562.507
margin_right = 1023.19
margin_bottom = 591.507
script = ExtResource( 3 )
